[gd_scene load_steps=4 format=3 uid="uid://cgt6j1h2w3k4m"]

[ext_resource type="Script" uid="uid://cl6kmmhf3qt04" path="res://src/ui/components/control_setting_row/control_setting_row.gd" id="1_control_row_script"]
[ext_resource type="FontFile" uid="uid://hypwi2d6bj7t" path="res://assets/fonts/font_main_bold.ttf" id="2_font_bold"]
[ext_resource type="FontFile" uid="uid://d3jqjftjdw5hh" path="res://assets/fonts/font_main_regular.ttf" id="3_font_regular"]

[node name="ControlSettingRow" type="HBoxContainer"]
size_flags_horizontal = 4
theme_override_constants/separation = 40
script = ExtResource("1_control_row_script")

[node name="ActionLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font_bold")
theme_override_font_sizes/font_size = 36
text = "Action"
horizontal_alignment = 2

[node name="KeysLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font_regular")
theme_override_font_sizes/font_size = 36
text = "Keys"
